@@ -1,14 +1,16 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.429 2005/10/21 01:52:49 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.430 2005/10/21 04:31:01 agaffney Exp $
 
 *GLI-0.3 (17 Oct 2005)
 
   20 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
-  src/GLIUtility.py, src/GLIArchitectureTemplate.py:
+  src/GLIUtility.py:
   horrible tangled mess of code that is tarball unpacking subprogress display
   add unpack progress to portage snapshot
+  use read() instead of readlines() in spawn()
+  only update progress bar for whole percents
 
   19 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
